--- a/style.css
+++ b/style.css
@@ -803,8 +803,6 @@ footer h3 {
       grid-template-columns: 1fr;
   -ms-grid-rows: 0.75fr 1fr 1fr 0.75fr;
       grid-template-rows: 0.75fr 1fr 1fr 0.75fr;
-  background: url(/src/img-resto/LaPaletteDuGout.jpg) center;
-  background-size: cover;
   width: 100%;
   height: 100%;
 }
@@ -1139,11 +1137,6 @@ footer h3 {
   color: white;
 }
 
-#note-E {
-  background: url(src/img-resto/LaNoteEnchantée.jpg) center;
-  background-size: cover;
-}
-
 .item3 {
   background: url(src/img-resto/ALaFrancaise.jpg) center;
   background-size: cover;
@@ -1151,6 +1144,26 @@ footer h3 {
 
 .item4 {
   background: url(src/img-resto/LeDeliceDesSens.jpg) center;
+  background-size: cover;
+}
+
+#francaise {
+  background: url(src/img-resto/ALaFrancaise.jpg) center;
+  background-size: cover;
+}
+
+#sens {
+  background: url(src/img-resto/LeDeliceDesSens.jpg) center;
+  background-size: cover;
+}
+
+#palettedugout {
+  background: url(src/img-resto/LaPaletteDuGout.jpg) center;
+  background-size: cover;
+}
+
+#note-E {
+  background: url(src/img-resto/LaNoteEnchantée.jpg) center;
   background-size: cover;
 }
 
