--- a/style.css
+++ b/style.css
@@ -1236,6 +1236,56 @@ footer h3 {
 }
 
 /**medias-query**/
+@media screen and (min-width: 1401px) {
+  .process-restaurants {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-column-gap: 5px;
+            column-gap: 5px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .process {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 50%;
+    margin-top: 50px;
+    border-radius: 0 0.5rem 0.5rem 0;
+    height: 100%;
+  }
+  .restaurants {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    grid-gap: 20px;
+    width: 100%;
+    justify-items: center;
+    height: 100%;
+  }
+  .restaurants .bloc-restaurant {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    -webkit-transition: 1.3s;
+    transition: 1.3s;
+  }
+}
+
 @media screen and (min-width: 960px) and (max-width: 1400px) {
   .title-underline {
     display: -webkit-box;
