--- a/style.scss
+++ b/style.scss
@@ -809,6 +809,44 @@ footer {
   -moz-box-shadow: 0px 0px 3px 3px #e17bdc88;
 }
 /**medias-query**/
+@media screen and (min-width: 1401px) {
+  .process-restaurants {
+    display: flex;
+    width :100%;
+    height: 100%;
+
+    column-gap: 5px;
+    align-items: flex-start;
+  }
+  .process {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    margin-top: 50px;
+    border-radius: 0 0.5rem 0.5rem 0;
+    height: 100%;
+  }
+  .restaurants {
+    display: flex;
+    
+    flex-direction: column;
+    grid-gap: 20px;
+    width: 100%;
+    justify-items: center;
+    height: 100%;
+    
+   
+    .bloc-restaurant {
+      display: flex;
+      
+      width: 100%;
+      height: 100%;
+      transition: 1.3s;
+    }
+
+  }
+  }
+
 @media screen and (min-width: 960px) and (max-width: 1400px) {
   .title-underline {
     display: flex;
