--- a/style.scss
+++ b/style.scss
@@ -826,27 +826,53 @@ footer {
     border-radius: 0 0.5rem 0.5rem 0;
     height: 100%;
   }
+  .card-text-case {
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 3%;
+    transition: 0.5s;
+    padding: 0 5%;
+    border-radius: 250px 250px 0 0;
+    letter-spacing: 2px;
+    font-size: 17px;
+  }
   .restaurants {
-    display: flex;
-    
-    flex-direction: column;
-    grid-gap: 20px;
-    width: 100%;
-    justify-items: center;
+    width:70%;
+    margin-right:10px;
+    margin-bottom: 40px;
+  }
+  .bloc-restaurant {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 0.2fr;
+    width: 96%;
     height: 100%;
-    
-   
-    .bloc-restaurant {
-      display: flex;
-      
-      width: 100%;
-      height: 100%;
-      transition: 1.3s;
+    transition: 1.3s;
     }
-
-  }
-  }
-
+    footer {
+      align-items: center;
+      font-size: 22px;
+      .h3 {
+        
+        margin: 30% 0;
+      }
+      .footer-list {
+        width: 93%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        column-gap: 25px;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+      }
+      .icon-text {
+        width: auto;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        margin: 0;
+      }
+    }
+}
 @media screen and (min-width: 960px) and (max-width: 1400px) {
   .title-underline {
     display: flex;
@@ -904,6 +930,11 @@ footer {
     .btn_text {
       color: black;
     }
+  }
+  .restaurants {
+    width:70%;
+    margin-right:10px;
+    margin-bottom: 40px;
   }
   .bloc-restaurant {
     display: grid;
