correction validateur css

--- a/style.scss
+++ b/style.scss
@@ -165,7 +165,7 @@ body {
   height: 80px;
   font-family: "Shrikhand", cursive;
   width: 100%;
-  box-shadow: 0px 0px 20px 8px 20px #d3d3d3;
+  box-shadow: 0px 0px 20px 8px #d3d3d3;
 }
 .head-logo-P {
   @include flex-mid;
