--- a/style.css
+++ b/style.css
@@ -263,8 +263,8 @@ body {
   height: 80px;
   font-family: "Shrikhand", cursive;
   width: 100%;
-  -webkit-box-shadow: 0px 0px 20px 8px 20px #d3d3d3;
-          box-shadow: 0px 0px 20px 8px 20px #d3d3d3;
+  -webkit-box-shadow: 0px 0px 20px 8px #d3d3d3;
+          box-shadow: 0px 0px 20px 8px #d3d3d3;
 }
 
 .head-logo-P {
